# fuskyomus

./: Cargo.toml  README.md  ci.yml  release.yml
.github/workflows/: release.yml
src/: app.rs  config.rs  library.rs  main.rs  player.rs  ui.rs
src/visualizer/: mod.rs  oscillator.rs
